--- a/index.html
+++ b/index.html
@@ -53,8 +53,16 @@
       </div>
     </nav>
     <br />
+    <!-- 
+    Nosotros 
+Talleres (acá puede haber un link a la página de cuando tengamos talleres Grabados) 
+Rodanteros 
+Camperización 
+Lugares 
+Experiencias musicales -->
     <header class="padre">
       <h1>Música Rodante</h1>
+
       <br /><br /><br />
       <h2>
         Descubre un nuevo mundo, nuevas aventuras, de la mano de nosotros,
@@ -64,9 +72,58 @@
     </header>
     <section class="viaje" align="center">
       <div>
-        <h3>Comencemos nuestro viaje</h3>
+        <h2>Quienes somos</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
+          ipsa? Provident est consequatur alias dolores, beatae sit eum quisquam
+          ex ipsam neque, reiciendis numquam labore esse. Nobis ut illo
+          explicabo.
+        </p>
       </div>
-      <img class="mapa" src="./images/map-ga736a9229_1280.jpg" alt="" />
+    </section>
+    <section align="center">
+      <div>
+        <h2>Nuestros talleres</h2>
+        <img src="./images/Copia de Logo. NO EDITAR!.png" alt="" />
+      </div>
+    </section>
+    <section>
+      <div>
+        <h2>Rodanteros</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis
+          fugit necessitatibus vitae nobis vel alias possimus laudantium laborum
+          officiis consequatur maxime, quibusdam, nulla iste, minima nesciunt in
+          illum quam. Error!
+        </p>
+      </div>
+    </section>
+    <section>
+      <h2>Camperización</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim
+        consectetur fugiat ipsum veritatis. Voluptatem nihil accusamus culpa
+        voluptatibus animi ab quia maiores nostrum delectus, voluptate ad neque
+        nemo cupiditate earum!
+      </p>
+    </section>
+    <section>
+      <h2>Lugares</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+        excepturi fuga necessitatibus hic fugit saepe, facere possimus itaque
+        perspiciatis numquam ducimus dolor consectetur. Dolore, facilis! Iste
+        nihil quisquam optio unde.
+      </p>
+    </section>
+    <section>
+      <h2>Experiencias musicales</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, expedita
+        illo minima repellendus voluptatem ducimus recusandae sequi similique
+        nesciunt nostrum. Odit consequuntur, architecto natus vero non sunt
+        deserunt facere enim!
+      </p>
     </section>
     <!-- <--Bootstrap-->
     <script
