--- a/index.html
+++ b/index.html
@@ -20,111 +20,68 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">MR</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <br />
-    <!-- 
+    <div id="cuerpo">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">MR</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <br />
+      <!-- 
     Nosotros 
 Talleres (acá puede haber un link a la página de cuando tengamos talleres Grabados) 
 Rodanteros 
 Camperización 
 Lugares 
 Experiencias musicales -->
-    <header class="padre">
-      <h1>Música Rodante</h1>
-
-      <br /><br /><br />
-      <h2>
-        Descubre un nuevo mundo, nuevas aventuras, de la mano de nosotros,
-        aprenderas de la cultura de los pueblos de latinoamerica, desde su
-        música, acampañanos en esta aventura
-      </h2>
-    </header>
-    <section class="viaje" align="center">
-      <div>
-        <h2>Quienes somos</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
-          ipsa? Provident est consequatur alias dolores, beatae sit eum quisquam
-          ex ipsam neque, reiciendis numquam labore esse. Nobis ut illo
-          explicabo.
-        </p>
-      </div>
-    </section>
-    <section align="center">
-      <div>
-        <h2>Nuestros talleres</h2>
-        <img src="./images/Copia de Logo. NO EDITAR!.png" alt="" />
-      </div>
-    </section>
-    <section>
-      <div>
-        <h2>Rodanteros</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis
-          fugit necessitatibus vitae nobis vel alias possimus laudantium laborum
-          officiis consequatur maxime, quibusdam, nulla iste, minima nesciunt in
-          illum quam. Error!
-        </p>
-      </div>
-    </section>
-    <section>
-      <h2>Camperización</h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim
-        consectetur fugiat ipsum veritatis. Voluptatem nihil accusamus culpa
-        voluptatibus animi ab quia maiores nostrum delectus, voluptate ad neque
-        nemo cupiditate earum!
-      </p>
-    </section>
-    <section>
-      <h2>Lugares</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-        excepturi fuga necessitatibus hic fugit saepe, facere possimus itaque
-        perspiciatis numquam ducimus dolor consectetur. Dolore, facilis! Iste
-        nihil quisquam optio unde.
-      </p>
-    </section>
-    <section>
-      <h2>Experiencias musicales</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, expedita
-        illo minima repellendus voluptatem ducimus recusandae sequi similique
-        nesciunt nostrum. Odit consequuntur, architecto natus vero non sunt
-        deserunt facere enim!
-      </p>
-    </section>
+      <header id="inicio">
+        <div class="contenedor">
+          <div>
+            <div id="titulo">
+              <h1>Música Rodante</h1>
+              <a type="button" class="btn btn-warning" href=""
+                >Sobre Nosotros</a
+              >
+            </div>
+          </div>
+          <div id="contenerLogo">
+            <div id="logo">
+              <h1></h1>
+            </div>
+          </div>
+        </div>
+      </header>
+      <section id="actividades"></section>
+      <section id="viajes"></section>
+      <section id="contacto"></section>
+    </div>
     <!-- <--Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
