--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ Experiencias musicales -->
               >
             </div>
           </div>
+
           <div id="contenerLogo">
             <div id="logo">
               <h1></h1>
@@ -78,7 +79,46 @@ Experiencias musicales -->
           </div>
         </div>
       </header>
-      <section id="actividades"></section>
+      <section id="actividades">
+        <br />
+        <h2 align="center">Nuestras actividades</h2>
+        <br />
+        <div class="container">
+          <div class="row">
+            <div class="col-md" align="center">
+              <h3>Talleres</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Mollitia repellendus veritatis alias molestias a, fuga, deserunt
+                quaerat harum doloremque assumenda minus facere molestiae eaque
+                accusamus officiis esse velit reprehenderit aspernatur.
+              </p>
+              <a type="button" class="btn btn-warning" href="">+</a>
+            </div>
+            <div class="col-md" align="center">
+              <h3>Camperización</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
+                eius cum, quo tempora quis aut neque consequatur deleniti, quasi
+                enim vero nobis iste. Laudantium veritatis fugiat adipisci cum,
+                nesciunt aut!
+              </p>
+              <a type="button" class="btn btn-warning" href="">+</a>
+            </div>
+            <div class="col-md" align="center">
+              <h3>Experiencias Músicales</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Distinctio atque eos dolores sed, blanditiis quisquam asperiores
+                quasi recusandae iste molestias nam possimus magnam eligendi
+                cumque reiciendis provident maiores eaque vero?
+              </p>
+              <a type="button" class="btn btn-warning" href="">+</a>
+            </div>
+          </div>
+        </div>
+        <br /><br />
+      </section>
       <section id="viajes"></section>
       <section id="contacto"></section>
     </div>
