Actualizacion Imagenes.Presentacion

--- a/index.html
+++ b/index.html
@@ -81,45 +81,84 @@ Experiencias musicales -->
       </header>
       <section id="actividades">
         <br />
-        <h2 align="center">Nuestras actividades</h2>
+        <h2 class="tituloAct" align="center">Nuestras actividades</h2>
         <br />
         <div class="container">
           <div class="row">
             <div class="col-md" align="center">
-              <h3>Talleres</h3>
-              <p>
+              <br />
+              <h3 class="texto">Talleres</h3>
+              <p class="texto">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Mollitia repellendus veritatis alias molestias a, fuga, deserunt
                 quaerat harum doloremque assumenda minus facere molestiae eaque
-                accusamus officiis esse velit reprehenderit aspernatur.
+                accusamus officiis esse velit.
               </p>
               <a type="button" class="btn btn-warning" href="">+</a>
+              <br />
             </div>
             <div class="col-md" align="center">
-              <h3>Camperización</h3>
-              <p>
+              <br />
+              <h3 class="texto">Camperización</h3>
+              <p class="texto">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
                 eius cum, quo tempora quis aut neque consequatur deleniti, quasi
                 enim vero nobis iste. Laudantium veritatis fugiat adipisci cum,
                 nesciunt aut!
               </p>
               <a type="button" class="btn btn-warning" href="">+</a>
+              <br />
             </div>
             <div class="col-md" align="center">
-              <h3>Experiencias Músicales</h3>
-              <p>
+              <br />
+              <h3 class="texto">Experiencias Músicales</h3>
+              <p class="texto">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Distinctio atque eos dolores sed, blanditiis quisquam asperiores
                 quasi recusandae iste molestias nam possimus magnam eligendi
                 cumque reiciendis provident maiores eaque vero?
               </p>
               <a type="button" class="btn btn-warning" href="">+</a>
+              <br />
             </div>
           </div>
         </div>
-        <br /><br />
+        <br />
       </section>
-      <section id="viajes"></section>
+      <section id="viajes">
+        <br />
+        <h2 class="tituloAct" align="center">Rodando</h2>
+        <br />
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              <div class="align-self-start" align="center">
+                <a
+                  href="https://photos.google.com/share/AF1QipOfyYVP8VjJAfczWXARwy5hTzgFwwrjARcojmIXEqUg77AyA5NVVKXM-ChjeqMARA/photo/AF1QipPfhdYmoKNGcjR3ZQbnUuG9h9VnS0emA5JOQnwb?key=bkdpNlVqMzlzZEZxRGJIdXJmTWg3QVRVZnNLaHdR"
+                >
+                  <img src="./images/viajesMontañaPequeña.jpg" alt=""
+                /></a>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="align-self-end" align="center">
+                <img src="./images/viajesMontañaPequeña.jpg" alt="" />
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="align-self-start" align="center">
+                <img src="./images/viajesMontañaPequeña.jpg" alt="" />
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="align-self-end" align="center">
+                <img src="./images/viajesMontañaPequeña.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <br />
+      </section>
       <section id="contacto"></section>
     </div>
     <!-- <--Bootstrap-->
