--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Experiencias musicales -->
         <br />
         <h2 class="tituloAct" align="center">Rodando</h2>
         <br />
-        <div class="container">
+        <!-- <div class="container">
           <div class="row">
             <div class="col-sm">
               <div class="align-self-start" align="center">
@@ -156,6 +156,52 @@ Experiencias musicales -->
               </div>
             </div>
           </div>
+        </div> -->
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="./images/viajesMontaña.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./images/camionetaAtardecer.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img src="./images/ballons.jpg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="./images/montaña.jpg" class="d-block w-100" alt="..." />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-target="#carouselExampleControls"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-target="#carouselExampleControls"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </button>
         </div>
         <br />
       </section>
