--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#viajes">Rodando</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#actividades">Actividades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link" href="#contacto">Contacto</a>
             </li>
           </ul>
         </div>
@@ -61,7 +61,7 @@ Rodanteros
 Camperización 
 Lugares 
 Experiencias musicales -->
-      <header id="inicio">
+      <!-- <header id="inicio">
         <div class="contenedor">
           <div>
             <div id="titulo">
@@ -78,53 +78,34 @@ Experiencias musicales -->
             </div>
           </div>
         </div>
-      </header>
-      <section id="actividades">
-        <br />
-        <h2 class="tituloAct" align="center">Nuestras actividades</h2>
-        <br />
+      </header> -->
+
+      <header>
         <div class="container">
           <div class="row">
-            <div class="col-md" align="center">
-              <br />
-              <h3 class="texto">Talleres</h3>
-              <p class="texto">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Mollitia repellendus veritatis alias molestias a, fuga, deserunt
-                quaerat harum doloremque assumenda minus facere molestiae eaque
-                accusamus officiis esse velit.
-              </p>
-              <a type="button" class="btn btn-warning" href="">+</a>
-              <br />
+            <div class="col-sm">
+              <div id="titulo">
+                <h1>Música Rodante</h1>
+                <a type="button" class="btn btn-warning" href=""
+                  >Sobre Nosotros</a
+                >
+              </div>
             </div>
-            <div class="col-md" align="center">
-              <br />
-              <h3 class="texto">Camperización</h3>
-              <p class="texto">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
-                eius cum, quo tempora quis aut neque consequatur deleniti, quasi
-                enim vero nobis iste. Laudantium veritatis fugiat adipisci cum,
-                nesciunt aut!
-              </p>
-              <a type="button" class="btn btn-warning" href="">+</a>
-              <br />
-            </div>
-            <div class="col-md" align="center">
-              <br />
-              <h3 class="texto">Experiencias Músicales</h3>
-              <p class="texto">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Distinctio atque eos dolores sed, blanditiis quisquam asperiores
-                quasi recusandae iste molestias nam possimus magnam eligendi
-                cumque reiciendis provident maiores eaque vero?
-              </p>
-              <a type="button" class="btn btn-warning" href="">+</a>
-              <br />
+            <div class="col-sm">
+              <!-- <div id="contenedorLogo">
+                <div id="logo"></div>
+              </div> -->
+              <div id="contenedorLogo">
+                <img
+                  src="./images/LogoMusica.png"
+                  class="img-fluid"
+                  alt="..."
+                />
+              </div>
             </div>
           </div>
         </div>
-        <br />
-      </section>
+      </header>
       <section id="viajes">
         <br />
         <h2 class="tituloAct" align="center">Rodando</h2>
@@ -157,51 +138,113 @@ Experiencias musicales -->
             </div>
           </div>
         </div> -->
-        <div
-          id="carouselExampleControls"
-          class="carousel slide"
-          data-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="./images/viajesMontaña.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
+        <div id="carrusel">
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="./images/viajesMontaña.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./images/camionetaAtardecer.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./images/ballons.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./images/montaña.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
             </div>
-            <div class="carousel-item">
-              <img
-                src="./images/camionetaAtardecer.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-target="#carouselExampleControls"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-target="#carouselExampleControls"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </button>
+          </div>
+        </div>
+        <br />
+      </section>
+      <section id="actividades">
+        <br />
+        <h2 class="tituloAct" align="center">Nuestras actividades</h2>
+        <br />
+        <div class="container">
+          <div class="row">
+            <div class="col-md" align="center">
+              <br />
+              <h3 class="texto">Camperización</h3>
+              <p class="texto">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
+                eius cum, quo tempora quis aut neque consequatur deleniti, quasi
+                enim vero nobis iste. Laudantium veritatis fugiat adipisci cum,
+                nesciunt aut!
+              </p>
+              <a type="button" class="btn btn-warning" href="">+</a>
+              <br />
             </div>
-            <div class="carousel-item">
-              <img src="./images/ballons.jpg" class="d-block w-100" alt="..." />
+            <div class="col-md" align="center">
+              <br />
+              <h3 class="texto">Experiencias Músicales</h3>
+              <p class="texto">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Distinctio atque eos dolores sed, blanditiis quisquam asperiores
+                quasi recusandae iste molestias nam possimus magnam eligendi
+                cumque reiciendis provident maiores eaque vero?
+              </p>
+              <a type="button" class="btn btn-warning" href="">+</a>
+              <br />
             </div>
-            <div class="carousel-item">
-              <img src="./images/montaña.jpg" class="d-block w-100" alt="..." />
+            <div class="col-md" align="center">
+              <br />
+              <h3 class="texto">Talleres</h3>
+              <p class="texto">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Mollitia repellendus veritatis alias molestias a, fuga, deserunt
+                quaerat harum doloremque assumenda minus facere molestiae eaque
+                accusamus officiis esse velit.
+              </p>
+              <a type="button" class="btn btn-warning" href="">+</a>
+              <br />
             </div>
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-target="#carouselExampleControls"
-            data-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-target="#carouselExampleControls"
-            data-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </button>
         </div>
         <br />
       </section>
