--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Experiencias musicales -->
                 >
               </div>
             </div>
-            <div class="col-sm">
+            <div class="col-md">
               <!-- <div id="contenedorLogo">
                 <div id="logo"></div>
               </div> -->
