--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div id="cuerpo">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">MR</a>
+        <a class="navbar-brand" href="#">Música Rodante</a>
         <button
           class="navbar-toggler"
           type="button"
