--- a/index.html
+++ b/index.html
@@ -248,7 +248,22 @@ Experiencias musicales -->
         </div>
         <br />
       </section>
-      <section id="contacto"></section>
+      <section id="contacto">
+        <h2 class="tituloAct" align="center">Contáctanos</h2>
+        <br />
+        <div class="container">
+          <div class="row">
+            <div class="col-md">
+              <h3 class="texto">Buscanos en nuestra redes sociales</h3>
+            </div>
+            <div class="col-md">
+              <h3 class="texto">
+                Se parte de esta experiencia, dejanos tu donación
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
     <!-- <--Bootstrap-->
     <script
